Make more generic and update naming of endpoint, update tests
