# src/main/java/uk/gov/ons/ctp/response/collection/exercise/endpoint/CollectionExerciseEndpoint.java
@@ -912,24 +912,27 @@ public class CollectionExerciseEndpoint {
   }
 
   /**
-   * Returns the latest live Collection Exercise for each survey from the supplied Collection
-   * Exercise IDs.
+   * Returns Collection Exercises for the supplied Collection Exercise IDs.
    *
    * @param collectionExerciseIds collection exercise IDs
-   * @return latest live Collection Exercise for each survey
+   * @param surveyLatest whether to return only the latest Collection Exercise for each survey
+   * @return Collection Exercises for the supplied IDs
    * @throws CTPException on error
    */
-  @RequestMapping(value = "/latest", method = RequestMethod.POST)
-  public ResponseEntity<List<CollectionExercise>> getLatestLiveCollectionExercises(
-      @RequestBody final List<UUID> collectionExerciseIds) throws CTPException {
+  @RequestMapping(value = "/ids", method = RequestMethod.POST)
+  public ResponseEntity<List<CollectionExercise>> getCollectionExercises(
+      @RequestBody final List<UUID> collectionExerciseIds,
+      @RequestParam(value = "surveyLatest", defaultValue = "false") final boolean surveyLatest)
+      throws CTPException {
 
     log.info(
-        "Getting latest live collection exercises",
-        kv("collection_exercise_ids", collectionExerciseIds));
+        "Getting collection exercises",
+        kv("collection_exercise_ids", collectionExerciseIds),
+        kv("survey_latest", surveyLatest));
 
-    List<CollectionExercise> liveCollectionExercises =
-        collectionExerciseService.getLatestLiveCollectionExercises(collectionExerciseIds);
+    List<CollectionExercise> collectionExercises =
+        collectionExerciseService.getCollectionExercises(collectionExerciseIds, surveyLatest);
 
-    return ResponseEntity.ok(liveCollectionExercises);
+    return ResponseEntity.ok(collectionExercises);
   }
 }
